# C-calculator-port

./: Cargo.toml  README.md  output.txt
outputs/: aoeu.txt  hell.txt
src/: main.rs
