[package]
name = "c_calculator_port_rust"
version = "0.1.0"
authors = ["Dari <Dari>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "PROGRAM.EXE"
LegalCopyright = "Copyright © 2020"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
