[package]
name = "rust_cli_utility_calculator_for_windows"
version = "0.1.1"
authors = ["Dari <Dari>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "CLI Calculator.exe"
LegalCopyright = "Copyright © 2020 Dari."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]